updated color palette, and content in people

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,11 +11,34 @@ nav:
 theme:
   name: material
   features:
+    - navigation.expand
     - navigation.tabs
     - navigation.top
     - navigation.tabs.sticky 
+    - navigation.indexes
+    - toc.integrate
     - navigation.expand
+    
   palette:
-    scheme: slate
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle: 
+        icon: material/toggle-switch-off-outline
+        name: Switch to light mode
+      primary: deep-purple
+      accent: deep-orange
+  
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/toggle-switch
+        name: Switch to dark mode
+      primary: deep-purple
+      accent: deep-orange
+
+# extra_css:
+#  - stylesheets/extra.css
+
+
 markdown_extensions:
   - attr_list
