added a new page for lab resources, and moved the letter of recommendation guidelines to that page.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,9 +5,10 @@ nav:
   - People: people.md
   - Publications: publications.md
   - Presentations: presentations.md
-  - Resources: resources.md
-  - Join us!: interest.md
-  - Contact: contact.md
+  - Lab Resources: lab_resources.md
+  - General Resources: resources.md
+  - Get Involved: interest.md
+  - Contact US: contact.md
 theme:
   name: material
   features:
